--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -25,8 +25,8 @@
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
       <title>EBAY copycat</title>
     </head>
-    <body ng-app="xmlApp"> 
-        <div ng-controller="svi_navBarController">
+    <body ng-app="sbzApp"> 
+    <!--         <div ng-controller="svi_navBarController">
 		<div ng-if="isRoleCitizen">
   			<div ng-include="'views/kupac_navBar.html'"></div>
 			<br><br><br><br><br><br>
@@ -41,6 +41,9 @@
 		</div> 
 	</div> 
 	<div ng-view>     
+    </div>
+    -->
+    <div ng-view>
     </div>
   </body>
 </html>
