--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -21,29 +21,30 @@
       <script type="text/javascript" src="controllers/menadzer_navBarController.js"></script>
       <script type="text/javascript" src="controllers/kupac_navBarController.js"></script>
       <script type="text/javascript" src="controllers/prodavac_navBarController.js"></script>
+      <script type="text/javascript" src="controllers/kupac_Controller.js"></script>
+      <script type="text/javascript" src="controllers/kupac_pretragaController.js"></script>
       
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
       <title>EBAY copycat</title>
     </head>
-    <body ng-app="sbzApp"> 
-    <!--         <div ng-controller="svi_navBarController">
-		<div ng-if="isRoleCitizen">
+    <body ng-app="sbzApp">
+    <!-- 
+    <div ng-controller="svi_navBarController">
+		<div ng-if="jesteKupac">
   			<div ng-include="'views/kupac_navBar.html'"></div>
 			<br><br><br><br><br><br>
 		</div>
-		<div ng-if="isRoleAlderman">
+		<div ng-if="jesteProdavac">
 			<div ng-include="'views/prodavac_navBar.html'"></div>
 			<br><br><br><br><br><br>
 		</div>
-		<div ng-if="isRolePresident">
+		<div ng-if="jesteMenadzer">
    			<div ng-include="'views/menadzer_navBar.html'"></div>
 			<br><br><br><br><br><br>
 		</div> 
 	</div> 
+	-->
 	<div ng-view>     
-    </div>
-    -->
-    <div ng-view>
     </div>
   </body>
 </html>
