--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -29,6 +29,7 @@
       <script type="text/javascript" src="controllers/kupac_Controller.js"></script>
       <script type="text/javascript" src="controllers/kupac_pretragaController.js"></script>
       <script type="text/javascript" src="controllers/kupac_infoController.js"></script>
+      <script type="text/javascript" src="controllers/kupac_korpaController.js"></script>
       <script type="text/javascript" src="controllers/prijava_Controller.js"></script>
       
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
