Dodavanje i izmjena kategorija kupaca

--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -30,6 +30,7 @@
       <script type="text/javascript" src="controllers/kupac_pretragaController.js"></script>
       <script type="text/javascript" src="controllers/kupac_infoController.js"></script>
       <script type="text/javascript" src="controllers/prijava_Controller.js"></script>
+      <script type="text/javascript" src="controllers/menadzer_kategorijeKupacaController.js"></script>
       
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
       <title>EBAY copycat</title>
