Prikaz kategorija artikala za menadzera

--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -44,6 +44,7 @@
       
       <!-- kontroleri za menadzera -->
       <script type="text/javascript" src="controllers/menadzer_kategorijeKupacaController.js"></script>
+      <script type="text/javascript" src="controllers/menadzer_kategorijeArtikalaController.js"></script>
       
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
       <title>EBAY copycat</title>
