--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -47,6 +47,7 @@
       <!-- kontroleri za menadzera -->
       <script type="text/javascript" src="controllers/menadzer_kategorijeKupacaController.js"></script>
       <script type="text/javascript" src="controllers/menadzer_kategorijeArtikalaController.js"></script>
+      <script type="text/javascript" src="controllers/menadzer_akcijeController.js"></script>
       
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
       <title>EBAY copycat</title>
