Prikaz informacija o menadzeru

--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -49,6 +49,7 @@
       <script type="text/javascript" src="controllers/menadzer_kategorijeKupacaController.js"></script>
       <script type="text/javascript" src="controllers/menadzer_kategorijeArtikalaController.js"></script>
       <script type="text/javascript" src="controllers/menadzer_akcijeController.js"></script>
+      <script type="text/javascript" src="controllers/menadzer_infoController.js"></script>
       
       <!--link rel="stylesheet" href="stylesheets/loginStyle.css"-->
       <title>EBAY copycat</title>
