Zapocet dio za artikle

--- a/ProjaraWeb/WebContent/index.html
+++ b/ProjaraWeb/WebContent/index.html
@@ -44,6 +44,7 @@
       <script type="text/javascript" src="controllers/prodavac_Controller.js"></script>
       <script type="text/javascript" src="controllers/prodavac_narudzbeController.js"></script>
       <script type="text/javascript" src="controllers/prodavac_racunInfoController.js"></script>
+      <script type="text/javascript" src="controllers/prodavac_artikliController.js"></script>
       
       <!-- kontroleri za menadzera -->
       <script type="text/javascript" src="controllers/menadzer_kategorijeKupacaController.js"></script>
